--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Unisave Interface</title>
+    <title>ℬᎯℂᏦUℙЅᏇᎯℙ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
